--- a/EPL.html
+++ b/EPL.html
@@ -284,6 +284,51 @@
             </tr>
 
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="10">
+                    <h3>Legend</h3>
+                    <ul>
+                        <li>Pld: Played</li>
+                        <li>GF: Goals For</li>
+                        <li>GA: Goals Against</li>
+                        <li>GD: Goal Difference</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="10">
+                    <h3>Notes</h3>
+                    <ul>
+                        <li>Manchester United and Manchester City have played 24 games each</li>
+                        <li>Manchester United and Manchester City have 29 and 41 points respectively</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="10">
+                    <h3>Abbreviations</h3>
+                    <ul>
+                        <li>AFC: Athletic Football Club</li>
+                        <li>FC: Football Club</li>
+                        <li>Utd: United</li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="10">
+                    <h3>Teams</h3>
+                    <ul
+        <h3>key</h3>
+                    <ul>
+                        <li>Position 1- 4:  UEFA Champions League</li>
+                        <li>Position 5: UEFA Europa League</li>
+                        <li>Position 18 - 20: Relegation</li>
+                    </ul>
+                </td>
+            </tr>
+           
+        </tfoot>
     </table>
 </body>
 </html>
